--- a/css/style.css
+++ b/css/style.css
@@ -101,15 +101,24 @@ p {
   margin: 0 auto;
 }
 
-.line {
-  opacity: 100%;
-}
-
 /* Make the sections snap to the sides of the page */
 .fullw {
   box-sizing: border-box;
   width: 100%;
 }
+
+.fullw-r {
+  box-sizing: border-box;
+  width: 90%;
+  margin-left: 10%;
+}
+
+.fullw-l {
+  box-sizing: border-box;
+  width: 90%;
+  margin-right: 10%;
+}
+
 
 .nfullw {
   box-sizing: content-box !important;
@@ -134,7 +143,7 @@ p {
   border-radius: 4px;
   /* background-color: transparent; */
   text-decoration: none;
-  margin: auto 20px;
+  margin: 2px 20px;
   font-size: 40px;
   border: none;
   cursor: pointer;
@@ -161,6 +170,7 @@ p {
   background: white;
   margin: 8px auto;
   border-radius: 2px;
+  opacity: 100%;
 }
 
 /* How to decorate the text */
